# burn-nano-gpt

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  deny.toml  mise.base.toml  mise.rust.toml
.cargo/: mutants.toml
.claude/: .gitignore  settings.json
.claude/hooks/: session-start.sh  stop.sh
.codex/: config.toml
.github/workflows/: ci_rust.yml  codeql.yml  dependency-review.yml  lint_gha.yml  mutants-rust.yml  sbom.yml  trivy.yml  trufflehog.yml
crates/burn-nano-gpt/: Cargo.toml
crates/burn-nano-gpt/src/: lib.rs
crates/dataset/: Cargo.toml
crates/dataset/src/: error.rs  lib.rs  tiny_shakespeare.rs
crates/model/: Cargo.toml
crates/model/src/: attention.rs  block.rs  config.rs  lib.rs  model.rs
crates/model/tests/: random_forward.rs
crates/tokenizer/: Cargo.toml
crates/tokenizer/src/: char_tokenizer.rs  error.rs  lib.rs
crates/tokenizer/tests/: dataset_round_trip.rs
crates/train/: Cargo.toml
crates/train/src/: batch.rs  lib.rs  loss.rs  main.rs  step.rs
docs/: loss.csv  plot_loss.py
